<?xml version="1.0" encoding="utf-8" ?>
<resources>
  <string name="app_name">nup</string>

  <string name="advanced">Advanced (requires network)</string>
  <string name="album">Album</string>
  <string name="album_colon">Album:</string>
  <string name="albums">Albums</string>
  <string name="albums_cached">Albums (cached)</string>
  <string name="albums_star">Albums *</string>
  <string name="append">Append</string>
  <string name="appended_song_fmt">Appended \"%s\" to playlist.</string>
  <string name="artist">Artist</string>
  <string name="artist_colon">Artist:</string>
  <string name="artists">Artists</string>
  <string name="artists_cached">Artists (cached)</string>
  <string name="artists_star">Artists *</string>
  <string name="browse">Browse</string>
  <string name="browse_albums">Browse albums</string>
  <string name="browse_albums_fmt">Browse %s albums</string>
  <string name="browse_artists">Browse artists</string>
  <string name="browse_cached_albums">Browse cached albums</string>
  <string name="browse_cached_albums_fmt">Browse cached %s albums</string>
  <string name="browse_cached_artists">Browse cached artists</string>
  <string name="browse_cached_songs">Browse cached songs</string>
  <string name="browse_cached_songs_by_artist_fmt">Browse cached %s songs</string>
  <string name="browse_cached_songs_from_album_fmt">Browse cached songs from %s</string>
  <string name="browse_songs">Browse songs</string>
  <string name="browse_songs_by_artist_fmt">Browse %s songs</string>
  <string name="browse_songs_from_album_fmt">Browse songs from %s</string>
  <string name="browse_songs_four_stars">Browse four-star songs</string>
  <string name="cache_is_empty">Cache is empty</string>
  <string name="cache_current_usage">Current usage: %.1f MB</string>
  <string name="cache_size">Cache size</string>
  <string name="cache_size_description">Local music cache in MB</string>
  <string name="cache_size_value">%d MB</string>
  <string name="cached">Cached</string>
  <string name="channel_name">nup</string>
  <string name="channel_description">Music playback status</string>
  <string name="clear_cache">Clear cache</string>
  <string name="clear_cache_message">Delete all cached music?</string>
  <string name="clear_covers">Clear cover images</string>
  <string name="clear_covers_message">Delete all downloaded cover images?</string>
  <string name="date_colon">Date:</string>
  <string name="dont_download_all">Don\'t download all</string>
  <string name="download_all">Download all</string>
  <string name="download_rate">Download rate</string>
  <string name="download_rate_description">Limit in KB/sec (0 is unlimited)</string>
  <string name="download_rate_value">%d KB/sec</string>
  <string name="exit">Exit</string>
  <string name="gain_adjustment">Gain adjustment</string>
  <string name="first_played">First played</string>
  <string name="first_played_suffix"> or less ago</string>
  <string name="insert">Insert</string>
  <string name="keywords">Keywords</string>
  <string name="last_played">Last played</string>
  <string name="last_played_suffix"> or longer ago</string>
  <string name="length_colon">Length:</string>
  <string name="loading">Loading...</string>
  <string name="loading_stats">Loading stats...</string>
  <string name="max_date">Max date</string>
  <string name="max_plays">Maximum plays</string>
  <string name="max_plays_suffix"> or fewer times</string>
  <string name="min_date">Min date</string>
  <string name="minimum_rating">Minimum rating</string>
  <string name="network_is_unavailable">Network is unavailable.</string>
  <string name="next">Next</string>
  <string name="never_synced">Never synced</string>
  <string name="no_results">No results.</string>
  <string name="order_by_last_played">Order by last played</string>
  <string name="password">Password</string>
  <string name="password_description">HTTP Basic Auth with server</string>
  <string name="pause">Pause</string>
  <string name="play">Play</string>
  <string name="playlist">Playlist</string>
  <string name="prev">Prev</string>
  <string name="pre_amp_gain">Pre-amp gain</string>
  <string name="pre_amp_gain_description">Adjustment in dB</string>
  <string name="pre_amp_gain_value">%+.1f dB</string>
  <string name="presets">Presets</string>
  <string name="rating_colon">Rating:</string>
  <string name="reset">Reset</string>
  <string name="remove_from_list">Remove from list</string>
  <string name="replace">Replace</string>
  <string name="return_to_player">Return to player</string>
  <string name="search">Search</string>
  <string name="search_hint">Search songs</string>
  <string name="search_results">Search results</string>
  <string name="server_url">Server URL</string>
  <string name="server_url_description">Google App Engine server</string>
  <string name="settings">Settings</string>
  <string name="shuffle">Shuffle</string>
  <string name="syncing_song_list">Syncing song list</string>
  <string name="song_details_ellipsis">Song details...</string>
  <string name="songs_to_preload">Songs to preload</string>
  <string name="songs_to_preload_description">Upcoming playlist songs to load</string>
  <string name="startup_message_title">Service is running.</string>
  <string name="startup_message_text">Feed me some songs.</string>
  <string name="sync_already">Already synchronizing</string>
  <string name="sync_complete">Synchronization complete</string>
  <string name="sync_progress_rebuilding_stats_tables">Rebuilding stats tables...</string>
  <string name="sync_progress_starting">Starting sync...</string>
  <string name="sync_progress_updating_presets">Updating presets...</string>
  <string name="sync_song_list">Sync song list</string>
  <string name="sync_song_list_message">Sync local song list from the server?</string>
  <string name="substring">Substring</string>
  <string name="tags">Tags</string>
  <string name="title">Title</string>
  <string name="title_colon">Title:</string>
  <string name="track_colon">Track:</string>
  <string name="truncate_list">Truncate list</string>
  <string name="unlimited">Unlimited</string>
  <string name="username">Username</string>
  <string name="username_description">HTTP basic auth with server</string>

  <!-- These two arrays must be kept in sync.
       gain_type_values corresponds to NupPreferences.GAIN_TYPE_*. -->
  <string-array name="gain_types">
    <item>Auto</item>
    <item>Album</item>
    <item>Track</item>
    <item>None</item>
  </string-array>
  <string-array name="gain_type_values">
    <item>auto</item>
    <item>album</item>
    <item>track</item>
    <item>none</item>
  </string-array>

  <!-- SearchFormActivity depends on these strings' lengths. -->
  <string-array name="min_ratings">
    <item />
    <item>★</item>
    <item>★★</item>
    <item>★★★</item>
    <item>★★★★</item>
    <item>★★★★★</item>
  </string-array>

  <!-- These two arrays must be kept in sync. -->
  <string-array name="played_times">
    <item />
    <item>one day</item>
    <item>one week</item>
    <item>one month</item>
    <item>three months</item>
    <item>six months</item>
    <item>one year</item>
    <item>three years</item>
    <item>five years</item>
  </string-array>
  <string-array name="played_times_sec">
    <item>0</item>
    <item>86400</item>
    <item>604800</item>
    <item>2592000</item>
    <item>7776000</item>
    <item>15552000</item>
    <item>31536000</item>
    <item>94608000</item>
    <item>157680000</item>
  </string-array>
</resources>
