<?xml version="1.0" encoding="utf-8" ?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="Server">
    <EditTextPreference
      android:key="server_url"
      android:title="@string/server_url"
      android:dialogMessage="@string/server_url_description"
      android:singleLine="true"
      android:inputType="textNoSuggestions"
    />
    <EditTextPreference
      android:key="username"
      android:title="@string/username"
      android:dialogMessage="@string/username_description"
      android:singleLine="true"
      android:inputType="textNoSuggestions"
    />
    <EditTextPreference
      android:key="password"
      android:title="@string/password"
      android:singleLine="true"
      android:inputType="textPassword"
    />
    <EditTextPreference
      android:key="account"
      android:title="@string/account"
      android:dialogMessage="@string/account_description"
      android:singleLine="true"
      android:inputType="textNoSuggestions"
    />
    <org.erat.nup.YesNoPreference
      android:key="sync_song_list"
      android:title="@string/sync_song_list"
      android:dialogMessage="@string/sync_song_list_message"
      android:dialogTitle="@string/sync_song_list"
    />
  </PreferenceCategory>

  <PreferenceCategory android:title="Playback">
    <!-- TODO: This really ought to be using androidx.preference.SeekBarPreference,
         but AndroidX requires Android 9.0 (API level 28) and I haven't upgraded.
         As a consequence of using EditTextPreference, the saved pref is a string
         rather than a float. -->
    <EditTextPreference
      android:key="pre_amp_gain"
      android:title="@string/pre_amp_gain"
      android:dialogMessage="@string/pre_amp_gain_description"
      android:singleLine="true"
      android:inputType="number|numberDecimal|numberSigned"
    />
  </PreferenceCategory>

  <PreferenceCategory android:title="Cache">
    <EditTextPreference
      android:key="cache_size"
      android:title="@string/cache_size"
      android:dialogMessage="@string/cache_size_description"
      android:singleLine="true"
      android:numeric="integer"
    />
    <org.erat.nup.YesNoPreference
      android:key="clear_cache"
      android:title="@string/clear_cache"
      android:dialogMessage="@string/clear_cache_message"
      android:dialogTitle="@string/clear_cache"
      android:dialogIcon="@android:drawable/ic_dialog_alert"
    />
    <EditTextPreference
      android:key="songs_to_preload"
      android:title="@string/songs_to_preload"
      android:dialogMessage="@string/songs_to_preload_description"
      android:singleLine="true"
      android:numeric="integer"
    />
    <EditTextPreference
      android:key="download_rate"
      android:title="@string/download_rate"
      android:dialogMessage="@string/download_rate_description"
      android:singleLine="true"
      android:numeric="integer"
    />
  </PreferenceCategory>
</PreferenceScreen>
