<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
>
  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
  >
    <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingTop="@dimen/vertical_padding"
      android:paddingBottom="@dimen/vertical_padding"
    >
      <!-- Artist -->
      <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/artist"
        style="@style/SearchAutocompleteLayout"
      >
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
          android:id="@+id/artist_edit_text"
          android:completionThreshold="1"
          style="@style/SearchTextField"
        />
      </com.google.android.material.textfield.TextInputLayout>

      <!-- Title -->
      <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/title"
        style="@style/SearchTextLayout"
      >
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/title_edit_text"
          style="@style/SearchTextField"
        />
      </com.google.android.material.textfield.TextInputLayout>

      <!-- Album -->
      <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/album"
        style="@style/SearchAutocompleteLayout"
      >
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
          android:id="@+id/album_edit_text"
          android:completionThreshold="0"
          style="@style/SearchTextField"
        />
      </com.google.android.material.textfield.TextInputLayout>

      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      >
        <!-- Substring -->
        <com.google.android.material.checkbox.MaterialCheckBox
          android:id="@+id/substring_checkbox"
          style="@style/SearchCheckbox"
          android:checked="true"
          android:text="@string/substring"
        />
        <!-- Shuffle -->
        <com.google.android.material.checkbox.MaterialCheckBox
          android:id="@+id/shuffle_checkbox"
          style="@style/SearchCheckbox"
          android:text="@string/shuffle"
        />
        <!-- Cached -->
        <com.google.android.material.checkbox.MaterialCheckBox
          android:id="@+id/cached_checkbox"
          style="@style/SearchCheckbox"
          android:text="@string/cached"
        />
      </LinearLayout>

      <!-- Min rating -->
      <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/minimum_rating"
        style="@style/SearchAutocompleteLayout"
      >
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
          android:id="@+id/min_rating_spinner"
          style="@style/SearchTextField"
          android:inputType="none"
        />
      </com.google.android.material.textfield.TextInputLayout>

      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      >
        <!-- Min date -->
        <com.google.android.material.textfield.TextInputLayout
          android:hint="@string/min_date"
          android:layout_weight="1"
          style="@style/SearchTextLayout"
        >
          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/min_date_edit_text"
            style="@style/SearchTextField"
          />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
          android:layout_width="8dp"
          android:layout_height="wrap_content"
        />

        <!-- Max date -->
        <com.google.android.material.textfield.TextInputLayout
          android:hint="@string/max_date"
          android:layout_weight="1"
          style="@style/SearchTextLayout"
        >
          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/max_date_edit_text"
            style="@style/SearchTextField"
          />
        </com.google.android.material.textfield.TextInputLayout>
      </LinearLayout>

      <TextView
        android:text="@string/advanced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="@dimen/search_heading_text"
        android:textStyle="bold"
      />

      <!-- Keywords -->
      <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/keywords"
        style="@style/SearchTextLayout"
      >
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/keywords_edit_text"
          style="@style/SearchTextField"
        />
      </com.google.android.material.textfield.TextInputLayout>

      <!-- Tags -->
      <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/tags"
        style="@style/SearchAutocompleteLayout"
      >
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
          android:id="@+id/tags_edit_text"
          android:completionThreshold="0"
          style="@style/SearchTextField"
        />
      </com.google.android.material.textfield.TextInputLayout>

      <!-- Order by last played -->
      <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/order_by_last_played_checkbox"
        style="@style/SearchCheckbox"
        android:text="@string/order_by_last_played"
      />

      <!-- Max plays -->
      <!-- TODO: Find some way to make this look better: the user's input ends
           up too close to the prefix text but the suffix is right-aligned. I
           spent way too long failing to get baseline alignment working between
           two TextViews and an EditText before giving up and switching to
           prefixText/suffixText. :-( -->
      <com.google.android.material.textfield.TextInputLayout
        style="@style/SearchTextLayout"
        android:hint="@string/max_plays"
        app:suffixText="@string/max_plays_suffix"
      >
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/max_plays_edit_text"
          style="@style/SearchTextField"
          android:inputType="numberSigned"
        />
      </com.google.android.material.textfield.TextInputLayout>

      <!-- First played -->
      <com.google.android.material.textfield.TextInputLayout
        style="@style/SearchAutocompleteLayout"
        android:hint="@string/first_played"
        app:suffixText="@string/first_played_suffix"
      >
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
          android:id="@+id/first_played_spinner"
          style="@style/SearchTextField"
          android:inputType="none"
        />
      </com.google.android.material.textfield.TextInputLayout>

      <!-- Last played -->
      <com.google.android.material.textfield.TextInputLayout
        style="@style/SearchAutocompleteLayout"
        android:hint="@string/last_played"
        app:suffixText="@string/last_played_suffix"
      >
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
          android:id="@+id/last_played_spinner"
          style="@style/SearchTextField"
          android:inputType="none"
        />
      </com.google.android.material.textfield.TextInputLayout>

      <!-- Add blank space at bottom to prevent overlap with fixed-position buttons. -->
      <Space
        android:layout_width="fill_parent"
        android:layout_height="56dp"
      />
    </LinearLayout>
  </ScrollView>

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:paddingLeft="@dimen/horizontal_padding"
    android:paddingRight="@dimen/horizontal_padding"
    android:paddingTop="@dimen/vertical_padding"
    android:paddingBottom="@dimen/vertical_padding"
  >
    <Button
      android:id="@+id/search_button"
      style="@style/Button"
      android:text="@string/search"
      android:onClick="onSearchButtonClicked"
    />
    <Space android:layout_width="@dimen/button_spacing" android:layout_height="fill_parent" />
    <Button
      android:id="@+id/reset_button"
      style="@style/Button"
      android:text="@string/reset"
      android:onClick="onResetButtonClicked"
    />
  </LinearLayout>
</RelativeLayout>
