<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="@dimen/grid2"
      android:paddingRight="@dimen/grid2"
      android:paddingTop="@dimen/grid2"
      android:paddingBottom="@dimen/grid1"
      android:background="@color/background"
      android:elevation="@dimen/height1"
      >
    <Button
        android:id="@+id/append_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/append"
        android:textSize="@dimen/material_text_button"
        android:textStyle="bold"
        android:onClick="onAppendButtonClicked"
        />
    <Button
        android:id="@+id/insert_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/insert"
        android:textSize="@dimen/material_text_button"
        android:textStyle="bold"
        android:onClick="onInsertButtonClicked"
        />
    <Button
        android:id="@+id/replace_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/replace"
        android:textSize="@dimen/material_text_button"
        android:textStyle="bold"
        android:onClick="onReplaceButtonClicked"
        />
  </LinearLayout>

  <ListView
      android:id="@+id/songs"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:elevation="0dp"
      />
</LinearLayout>
